@@ -1,3 +1,7 @@
+Fri Jul 11 22:48:59 CEST 2008 Christian Anthon <anthon@kiku.dk>
+
+	* rollout.c: fix type of board in log_game_start
+
 Fri Jul 11 11:23:02 CEST 2008 Christian Anthon <anthon@kiku.dk>
 
 	* rollout.c: move log_name out of globals
